third_party/move/move-compiler-v2/tests/uninit-use-checker/use_twice_before_assign.exp

Diagnostics:
warning: Unused local variable `y`. Consider removing or prefixing with an underscore: `_y`
  ┌─ tests/uninit-use-checker/use_twice_before_assign.move:4:9
  │
4 │     let y = x + x;
  │         ^


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/use_twice_before_assign.move:4:13
  │
4 │     let y = x + x;
  │             ^

error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/use_twice_before_assign.move:4:17
  │
4 │     let y = x + x;
  │                 ^
